tests/snapshots/serde__de_dense_array_with_properties.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst arr = [\"asd\", 1];\narr.foo = \"bar\";\narr\n"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: DenseArray [
        String(
            OneByte("asd"),
        ),
        I32(
            1,
        ),
    ] {
        OneByte("foo"): String(
            OneByte("bar"),
        ),
    },
}

