tests/snapshots/serde__de_double.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1.1"
---
=== VALUE ===
Double(1.1)

=== HEAP ===
Heap {}

