tests/snapshots/serde__de_double_infinity.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nInfinity"
---
=== VALUE ===
Double(inf)

=== HEAP ===
Heap {}

