tests/snapshots/serde__de_double_max.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n1.7976931348623157e+308"
---
=== VALUE ===
Double(1.7976931348623157e308)

=== HEAP ===
Heap {}

