tests/snapshots/serde__de_double_min.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n5e-324"
---
=== VALUE ===
Double(5e-324)

=== HEAP ===
Heap {}

