tests/snapshots/serde__de_double_nan.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nNaN"
---
=== VALUE ===
Double(NaN)

=== HEAP ===
Heap {}

