tests/snapshots/serde__de_double_neg.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n-1.1"
---
=== VALUE ===
Double(-1.1)

=== HEAP ===
Heap {}

