tests/snapshots/serde__de_double_neg_infinity.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n-Infinity"
---
=== VALUE ===
Double(-inf)

=== HEAP ===
Heap {}

