tests/snapshots/serde__de_double_neg_zero.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n-0"
---
=== VALUE ===
Double(-0.0)

=== HEAP ===
Heap {}

