tests/snapshots/serde__de_error_no_message_with_cause.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew Error(undefined, { cause: 1 })"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: Error {
        name: Error,
        message: None,
        stack: Some(
            OneByte("Error\n    at <anonymous>:1:1"),
        ),
        cause: Some(
            I32(
                1,
            ),
        ),
    },
}

